styles correction on smaller devices

--- a/src/styles/components/interactive.scss
+++ b/src/styles/components/interactive.scss
@@ -51,10 +51,16 @@
     .interactive{
         margin-top: 5em;
     }
+    .floors{
+        margin-top: 7em;
+    }
 }
 
 @media (min-width: 481px) and (max-width: 768px){
     .interactive{
         margin-top: 5em;
+    }
+    .floors{
+        margin-top: 7em;
     }
 }
